<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2"
    android:orientation="vertical">

    <include layout="@layout/layout_gray_bg_action_bar" />

    <com.zhangku.qukandian.widght.TaskChestView
        android:id="@+id/TaskChestView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="11dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/space_big"
        android:paddingRight="@dimen/space_big"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="19dp">

            <LinearLayout
                android:id="@+id/ll_chest_situation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/space_small"
                android:paddingRight="@dimen/space_small"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="33dp"
                        android:text="@string/task_chest_tip"
                        android:textColor="@color/gray_3"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/mGoldNumTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_chest_tip2"
                        android:textColor="@color/tab_select_new"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/mOneView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/share_bottom_line_whitebg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="有效阅读"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_15_size" />

                        <TextView
                            android:id="@id/task_chest_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/task_chest_dialog_process"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_13_size" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="认真阅读文章并获得奖励"
                        android:textColor="@color/gray_9"
                        android:textSize="@dimen/text_13_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mTwoView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/share_bottom_line_whitebg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="阅读红包"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_15_size" />

                        <TextView
                            android:id="@id/task_chest_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/task_chest_dialog_process"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_13_size" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="阅读带有红包标识的文章并获得奖励"
                        android:textColor="@color/gray_9"
                        android:textSize="@dimen/text_13_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mThreeView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/share_bottom_line_whitebg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="热搜"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_15_size" />

                        <TextView
                            android:id="@id/task_chest_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/task_chest_dialog_process"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_13_size" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="【首页】-【热搜】搜索后阅读并获得奖励"
                        android:textColor="@color/gray_9"
                        android:textSize="@dimen/text_13_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mFourView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/share_bottom_line_whitebg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="幸运任务"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_15_size" />

                        <TextView
                            android:id="@id/task_chest_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/task_chest_dialog_process"
                            android:textColor="@color/gray_3"
                            android:textSize="@dimen/text_13_size" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="完成【任务列表】的幸运任务"
                        android:textColor="@color/gray_9"
                        android:textSize="@dimen/text_13_size" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>
